Start a second simple vignette
Former-commit-id: c302e3de330119617b56a43988f48a5f2a01b7c4

--- a/vignettes/dfa-clustering-example.Rmd
+++ b/vignettes/dfa-clustering-example.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Fisheries ensemble clustering example"
+title: "Dynamic Factor Analysis ensemble clustering example"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{ensemble-example}
