--- a/vignettes/simple-example.Rmd
+++ b/vignettes/simple-example.Rmd
@@ -26,8 +26,9 @@ library(clusterthat)
 
 We will work with the example haddock data. Let's add some features from the timeseries data into our model data set that we will use for the clustering.
 
-```{r}
-df <- add_features_flr(haddock_mod, haddock_ts)
+```{r, warning=FALSE}
+df <- add_features_flr(haddock_mod, haddock_ts) %>%
+  dplyr::filter(!is.na(log_ffmsy_median))
 dplyr::glimpse(df)
 ```
 
@@ -45,27 +46,25 @@ factoextra::fviz_nbclust(df_scaled, cluster::pam, method = "silhouette",
   k.max = 15)
 ```
 
-We are looking for a number of clusters where the average silhouette width hits a maximum. The average silhouette width reaches a maximum at 12 clusters. We will work with that number here on in. Because the number of clusters exceeds the length of the built-in colour scale, we will add our own colour scale.
+We are looking for a number of clusters where the average silhouette width hits a maximum. The average silhouette width reaches a maximum at 4 clusters. We will work with that number here on in.
 
-```{r}
-m_pam <- cluster::pam(df_scaled, k = 12)
+```{r, warnings = FALSE}
+m_pam <- cluster::pam(df_scaled, k = 2)
 plot_clusters(m_pam, data = df_scaled, colour_vector = as.factor(m_pam$clustering),
-  colour_label = "Cluster") +
-  ggplot2::scale_color_viridis_d()
+  colour_label = "Cluster")
 ```
 
-The default dissimilarity metric is the euclidean distance (the root of the sum of squares of differences). An alternative is the "manhattan" dissimilarity metric which represents the some of the absolute differences. The manhattan metric can be a bit more robust to outliers, but in most cases it should render nearly the same result as the euclidean metric.
+The default dissimilarity metric is the euclidean distance (the root of the sum of squares of differences). An alternative is the "manhattan" dissimilarity metric which represents the sum of the absolute differences. The manhattan metric can be a bit more robust to outliers, but in most cases it should render nearly the same result as the euclidean metric.
 
-```{r}
+```{r, warnings = FALSE}
 factoextra::fviz_nbclust(df_scaled, cluster::pam, method = "silhouette",
   metric = "manhattan", k.max = 15)
 
-m_pam_manhattan <- cluster::pam(df_scaled, k = 12, metric = "manhattan")
+m_pam_manhattan <- cluster::pam(df_scaled, k = 2, metric = "manhattan")
 
 plot_clusters(m_pam_manhattan, data = df_scaled,
   colour_vector = as.factor(m_pam_manhattan$clustering),
-  colour_label = "Cluster") +
-  ggplot2::scale_color_viridis_d()
+  colour_label = "Cluster")
 ```
 
 Here they give nearly the same result although some models are placed into a different cluster. Let's continue with the slightly more robust manhattan metric.
