--- a/vignettes/som-example.Rmd
+++ b/vignettes/som-example.Rmd
@@ -33,7 +33,9 @@ The R package `kohonen` includes functions to implement the SOMs. Here we demons
 <https://CRAN.R-project.org/package=kohonen>
 <https://www.jstatsoft.org/article/view/v021i05>
 
-```{r som-fit, fig.height = 3, fig.width = 4}
+Here we explore SOMs for 44 stock assessment model runs for Georges Bank haddock, exploring the "fishing opportunity" (fo_median), estimated fishing mortality rate in the last year of the model relative to the fishing mortality rate that would produce MSY (ffmsy_median) and the estimated biomass in the last year of the model relative to the biomass that would lead to MSY (bbmsy_median).
+
+```{r data1, fig.height = 3, fig.width = 4}
 ggplot(haddock_mod) + geom_point(aes(
   x = bbmsy_median, y = ffmsy_median,
   colour = model_id, group = model_id
@@ -41,16 +43,24 @@ ggplot(haddock_mod) + geom_point(aes(
   scale_colour_viridis_c()
 ```
 
-First we need to reshape our data for fitting:
+```{r data2, fig.height = 3, fig.width = 4}
+ggplot(haddock_mod) + geom_point(aes(
+  x = fo_median, y = ffmsy_median,
+  colour = model_id, group = model_id
+)) +
+  scale_colour_viridis_c()
+```
+
+First we need to reshape our data for fitting.
 
 ```{r}
 df <- haddock_mod %>%
-      dplyr::select(ffmsy_median, bbmsy_median) %>%
+      dplyr::select(fo_median, ffmsy_median, bbmsy_median) %>%
       scale()
 head(df)
 ```
 
-The rows are our various models and the columns represent different values of interest - in this case F/Fmsy and B/Bmsy in the last year of the model.
+The rows are our various models and the columns represent different parameters of interest.
 
 Next we create the size of the SOM training grid. The dimensions are chosen aiming for 5-10 units per class. In this case we chose 6 classes to cover 44 stock assessment model runs.
 
@@ -86,35 +96,35 @@ clusterthat::plot_som_individual(som_model,
 
 We can also plot multiple SOMs at the same time to tell a story about how values of interest relate to one another across the grid.
 
-```{r multi, fig.height = 7, fig.width = 6}
+```{r multi, fig.height = 9, fig.width = 6}
 clusterthat::plot_som(som_model,
    data = df, colour_vector = haddock_mod$fmodel,
    colour_label = "F model",
-   nrow = 2
+   nrow = 3
  )
 ```
 
 The `kohonen` R package also includes many other figures for visualising SOMs. The following figure essentially combines the SOMs above showing the values of each parameter of interest on the same figure.  
 
 ```{r codes, fight.height=5, fig.width = 6}
-plot(som_model, type = "codes")
+plot(som_model, type = "codes", shape = "straight")
 ```
 
-We can also apply hierarchical clustering to further limit the dimensions of the clustered groups. 
+We can also apply hierarchical clustering to further limit the dimensions of the clustered groups. We recommend using the `cluster::pam` function to evaluate the number of clusters. 
+
+```{r}
+factoextra::fviz_nbclust(df, cluster::pam, method = "silhouette",
+  k.max = 6)
+```
+
+In this case, while six clusters has the highest silhoutte width, we demonstrate the hierarchical clustering with three clusters since the average silhouette widths are relatively close. 
 
 ```{r cluster, fig.height = 4, fig.width = 6}
-par(mfrow=c(1,2))
-mydata <- som_model$codes[[1]]
-wss <- (nrow(mydata) - 1) * sum(apply(mydata, 2, var))
-for (i in 2:5) {
-  wss[i] <- sum(kmeans(mydata, centers = i)$withinss)
-}
-plot(wss, type = "o")
-
 ## use hierarchical clustering to cluster the codebook vectors
 som_cluster <- cutree(hclust(dist(som_model$codes[[1]])), 3)
 # plot these results:
 colours <- viridisLite::viridis(3)
-plot(som_model, type = "mapping", main = "Clusters", bgcol = colours[som_cluster])
+plot(som_model, type = "mapping", main = "Clusters", bgcol = colours[som_cluster], shape = "straight")
 add.cluster.boundaries(som_model, som_cluster)
 ```
+
