--- a/vignettes/som-example.Rmd
+++ b/vignettes/som-example.Rmd
@@ -117,13 +117,13 @@ factoextra::fviz_nbclust(df, cluster::pam, method = "silhouette",
   k.max = 6)
 ```
 
-In this case, while six clusters has the highest silhoutte width, we demonstrate the hierarchical clustering with three clusters since the average silhouette widths are relatively close. 
+In this case, while two clusters had the highest silhoutte width. 
 
 ```{r cluster, fig.height = 4, fig.width = 6}
 ## use hierarchical clustering to cluster the codebook vectors
-som_cluster <- cutree(hclust(dist(som_model$codes[[1]])), 3)
+som_cluster <- cutree(hclust(dist(som_model$codes[[1]])), 2)
 # plot these results:
-colours <- viridisLite::viridis(3)
+colours <- viridisLite::viridis(2)
 plot(som_model, type = "mapping", main = "Clusters", bgcol = colours[som_cluster], shape = "straight")
 add.cluster.boundaries(som_model, som_cluster)
 ```
