--- a/vignettes/fpca-clustering-example.Rmd
+++ b/vignettes/fpca-clustering-example.Rmd
@@ -10,7 +10,9 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.width = 5,
+  fig.asp = 0.68
 )
 ```
 
